--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -18,6 +18,7 @@ metadata:
     backstage.io/kubernetes-id: "bttestnodeapp4"
     backstage.io/kubernetes-cluster: "bsidp-cluster"
     backstage.io/kubernetes-namespace: 'default'
+    sonarqube.org/project-key: lattice-idp
     # backstage.io/techdocs-ref: dir:.
     #backstage.io/techdocs-ref: url:http://<your-service-endpoint>
 spec:
