--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -19,6 +19,7 @@ metadata:
     backstage.io/kubernetes-cluster: "bsidp-cluster"
     backstage.io/kubernetes-namespace: 'default'
     sonarqube.org/project-key: lattice-idp
+    dev.azure.com/project-repo: lattice/lattice
     # backstage.io/techdocs-ref: dir:.
     #backstage.io/techdocs-ref: url:http://<your-service-endpoint>
 spec:
