--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -20,7 +20,7 @@ metadata:
     backstage.io/kubernetes-namespace: 'default'
     sonarqube.org/project-key: lattice-idp
     dev.azure.com/project-repo: lattice/lattice
-    dev.azure.com/project: lattice
+    dev.azure.com/project: lattice/lattice
     # backstage.io/techdocs-ref: dir:.
     #backstage.io/techdocs-ref: url:http://<your-service-endpoint>
 spec:
